Update testing for rsicb

--- a/notebooks/Testing.ipynb
+++ b/notebooks/Testing.ipynb
@@ -2,61 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "8178fee1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34mArchive\u001b[m\u001b[m/\r\n",
-      "Archive.zip\r\n",
-      "\u001b[34mArchive_2\u001b[m\u001b[m/\r\n",
-      "\u001b[34mCOMP6721_Group_L\u001b[m\u001b[m/\r\n",
-      "Euro sat - Resnet 30 epochs without weights Transfer Learning - WITH TSNE.ipynb\r\n",
-      "Euro sat - Resnet 30 epochs without weights-WITH TSNE.ipynb\r\n",
-      "Euro sat - Resnet 30 epochs without weights.ipynb\r\n",
-      "Euro sat - Resnet 30 epochs- Transfer Learning with 13 bands.ipynb\r\n",
-      "EuroSat-transfer-learning-resnet18-13.pt\r\n",
-      "EuroSat-transfer-learning-resnet18-3.pt\r\n",
-      "Euro_sat_VGG.ipynb\r\n",
-      "PLANET_IMAGE_CLASSIFICATION DENSENET121 - TESTING DATA.ipynb\r\n",
-      "PLANET_IMAGE_CLASSIFICATION RESNET - TESTING DATA.ipynb\r\n",
-      "PLANET_IMAGE_CLASSIFICATION RESNET - TSNE.ipynb\r\n",
-      "PLANET_IMAGE_CLASSIFICATION RESNET.ipynb\r\n",
-      "PLANET_IMAGE_CLASSIFICATION VGG16 - TESTING DATA.ipynb\r\n",
-      "PLANET_IMAGE_CLASSIFICATION-DENSENET121.ipynb\r\n",
-      "PLANET_IMAGE_CLASSIFICATION-VGG16.ipynb\r\n",
-      "\u001b[34mPlanetDataset\u001b[m\u001b[m/\r\n",
-      "Satellite-image-classification-transfer-learning-resnet18.pt\r\n",
-      "Satellite_Classification_using_RESNET-TSNE.ipynb\r\n",
-      "Satellite_Classification_using_RESNET-oop.ipynb\r\n",
-      "Satellite_Classification_using_VGG_Load_and_save_model.ipynb\r\n",
-      "Testing.ipynb\r\n",
-      "Transfer_Learning_Satellite_Classification_using_RESNET.ipynb\r\n",
-      "Untitled.ipynb\r\n",
-      "densenet.pth\r\n",
-      "euro_sat_vgg_val.ipynb\r\n",
-      "eurosat-densenet.pt\r\n",
-      "resnet.pth\r\n",
-      "rsicb_densenet.ipynb\r\n",
-      "rsicb_vgg_ablative.ipynb\r\n",
-      "sat_data_vgg_op.ipynb\r\n",
-      "train_results.pkl\r\n",
-      "train_results_densnet.pkl\r\n",
-      "train_results_densnet_1.pkl\r\n",
-      "train_results_vgg.pkl\r\n",
-      "vgg.pth\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "%ls "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 82,
    "id": "cf42db34",
    "metadata": {},
@@ -112,6 +57,7 @@
     "print(\"Device: {}\".format(device))\n",
     "\n",
     "sat_map ={0:\"AnnualCrop\", 1:\"Forest\",2:\"HerbaceousVegetation\",3:\"Highway\",4:\"Industrial\",5:\"Pasture\",6:\"PermanentCrop\",7:\"Residential\",8:\"River\",9:\"SeaLake\"}\n",
+    "# rsicb_map={0:\"cloudy\",1:\"desert\",2:\"green_area\",3:\"water\"}\n",
     "model = torch.load(\"./eurosat-resnet_new.pth\")\n",
     "model.eval()\n",
     "transform = transforms.Compose([transforms.ToTensor()])\n",
